[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_merkle = "1.3"
sha2 = "0.10"
hex = "0.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8.5"
